make html-validate happy

--- a/content/2010/02/17/220000.md
+++ b/content/2010/02/17/220000.md
@@ -41,7 +41,7 @@ postTags: [IYH, PC]
 </table>
 
 そんでもって、 Windows エクスペリエンスの結果がこんな感じです。<br />
-[![](https://blogmedia.yosida95.com/2010/02/17/220000/windows_experience.jpg)](https://blogmedia.yosida95.com/2010/02/17/220000/windows_experience.jpg)
+[![Windows エクスペリエンス 基本スコア 5.9](https://blogmedia.yosida95.com/2010/02/17/220000/windows_experience.jpg)](https://blogmedia.yosida95.com/2010/02/17/220000/windows_experience.jpg)
 
 新入りパソコンですが、一躍メインパソコンとして、私に使われております。
 ちなみに、今まで使ってきた DELL 製の Windows Vista 搭載 PC はサブ PC1 として CPU 切替機を介して現在でも使用しています。
