--- a/content/2011/05/20/193525.md
+++ b/content/2011/05/20/193525.md
@@ -9,11 +9,11 @@ postCategory: Diary
 けれども、おそらく書きあがってみたら**改悪版**になる。
 
 <div class="table-x-scroll">
-  <table width="180%">
+  <table style="width: 150%;">
     <thead>
       <tr>
-        <th scope="col" width="20%">学年（西暦）</th>
-        <th scope="col" width="20%">見出し</th>
+        <th scope="col" style="width: 20%;">学年（西暦）</th>
+        <th scope="col" style="width: 20%;">見出し</th>
         <th scope="col">エピソード</th>
       </tr>
     </thead>
