--- a/content/2013/01/01/005050.md
+++ b/content/2013/01/01/005050.md
@@ -21,20 +21,20 @@ postTags: [Year in Review]
 
 ### セッション
 
-| 勉強会 { width="30%" }                | 日付 { width="20%" } | タイトル（スライドへのリンク）                                                                                                                    |
-| ------------------------------------- | -------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------- |
-| PyConJP 2012                          | 9月15日              | [ナウでヤングな17歳の VPS 構築記](https://speakerdeck.com/yosida95/2012-dot-09-dot-15-pycon-jp-2012-%5Bnaudeyanguna17sui-falsevps-gou-zhu-ji-%5D) |
-| プログラミング生放送勉強会第19回@品川 | 12月22日             | [libvirt で作るプライベート VPS](https://speakerdeck.com/yosida95/purosheng-mian-qiang-hui-di-19hui-at-pin-chuan)                                 |
+| 勉強会 {scope="col" style="width: 30%;"} | 日付 {scope="col" style="width: 20%;"} | タイトル（スライドへのリンク） {scope="col"}                                                                                                      |
+|------------------------------------------|----------------------------------------| ------------------------------------------------------------------------------------------------------------------------------------------------- |
+| PyConJP 2012                             | 9月15日                                | [ナウでヤングな17歳の VPS 構築記](https://speakerdeck.com/yosida95/2012-dot-09-dot-15-pycon-jp-2012-%5Bnaudeyanguna17sui-falsevps-gou-zhu-ji-%5D) |
+| プログラミング生放送勉強会第19回@品川    | 12月22日                               | [libvirt で作るプライベート VPS](https://speakerdeck.com/yosida95/purosheng-mian-qiang-hui-di-19hui-at-pin-chuan)                                 |
 
 ### LT
 
-| 勉強会 { width="30%" }            | 日付 { width="20%" } | タイトル（スライドへのリンク）                                                                                          |
-| --------------------------------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------- |
-| プログラミング生放送勉強会14@品川 | 4月7日               | [Python meets MongoDB](https://speakerdeck.com/yosida95/14)                                                             |
-| 私立プログラミングキャンプ        | 8月11日              | [鋭意製作中](https://speakerdeck.com/yosida95/number-upcamp)                                                            |
-| 私立プログラミングキャンプ        | 8月12日              | [僕らの#upcamp](https://speakerdeck.com/yosida95/number-upcamp-1) (slideshow by [@oidong1](http://twitter.com/oidong1)) |
-| さくら石狩 DC 見学ツアー          | 11月27日             | [ナウでヤングな17歳の VPS 構築記 (LT size)](https://speakerdeck.com/yosida95/2012-dot-11-dot-27-number-shi-shou-dctua)  |
-| CombConf                          | 12月23日             | [コミュニティ参加のススメ](https://speakerdeck.com/yosida95/2012-dot-12-dot-23-combconf)                                |
+| 勉強会 {scope="col" style="width: 30%;"} | 日付 {scope="col" style="width: 20%;"} | タイトル（スライドへのリンク） {scope="col"}                                                                            |
+|------------------------------------------|----------------------------------------|-------------------------------------------------------------------------------------------------------------------------|
+| プログラミング生放送勉強会14@品川        | 4月7日                                 | [Python meets MongoDB](https://speakerdeck.com/yosida95/14)                                                             |
+| 私立プログラミングキャンプ               | 8月11日                                | [鋭意製作中](https://speakerdeck.com/yosida95/number-upcamp)                                                            |
+| 私立プログラミングキャンプ               | 8月12日                                | [僕らの#upcamp](https://speakerdeck.com/yosida95/number-upcamp-1) (slideshow by [@oidong1](http://twitter.com/oidong1)) |
+| さくら石狩 DC 見学ツアー                 | 11月27日                               | [ナウでヤングな17歳の VPS 構築記 (LT size)](https://speakerdeck.com/yosida95/2012-dot-11-dot-27-number-shi-shou-dctua)  |
+| CombConf                                 | 12月23日                               | [コミュニティ参加のススメ](https://speakerdeck.com/yosida95/2012-dot-12-dot-23-combconf)                                |
 
 ## イベントの運営
 
