--- a/content/2013/02/03/093956.md
+++ b/content/2013/02/03/093956.md
@@ -5,7 +5,7 @@ postCategory: Networking
 postTags: [Vyatta, DNS]
 ---
 
-[![](https://blogmedia.yosida95.com/2013/02/03/081842/network-graph.png)](https://blogmedia.yosida95.com/2013/02/03/081842/network-graph.png)
+[![ネットワークグラフ](https://blogmedia.yosida95.com/2013/02/03/081842/network-graph.png)](https://blogmedia.yosida95.com/2013/02/03/081842/network-graph.png)
 
 ## DNS Forwarding
 
