--- a/content/2013/05/27/005303.md
+++ b/content/2013/05/27/005303.md
@@ -76,20 +76,20 @@ if __name__ == u'__main__':
 
 Zabbix にログインした状態で、「管理」-> 「メディアタイプ」 -> 「メディアタイプの作成」と進み、フォームに適切な情報を入力し、 Zabbix メディアタイプを作成して下さい。
 
-[![](https://blogmedia.yosida95.com/2013/05/27/005303/create-media-type.png)](https://blogmedia.yosida95.com/2013/05/27/005303/create-media-type.png)
+[![Zabbix メディアタイプ作成画面](https://blogmedia.yosida95.com/2013/05/27/005303/create-media-type.png)](https://blogmedia.yosida95.com/2013/05/27/005303/create-media-type.png)
 
 ### 手順3. "Growl" メディアをユーザーに追加する
 
 Zabbix にログインした状態で、「管理」 -> 「ユーザー」と進み、 Growl 通知を受け取りたいユーザーの設定画面を開きます。
 ユーザー設定画面の下方に「メディア」という項目があるので、この項目の「追加」ボタンを押し、開いたフォームに適切な情報を入力し、 "Growl" メディアをユーザーに追加します。
 
-![](https://blogmedia.yosida95.com/2013/05/27/005303/add-media.png)
+![Zabbix メディア追加画面](https://blogmedia.yosida95.com/2013/05/27/005303/add-media.png)
 
 なお、「送信先」のフォーマットですが、 "user:password@hostname:port" を想定しています。
 user は不使用ですので空を、 password は通知を受け取るマシンの Growl 環境設定のネットワークタブで設定したものを、 hostname は通知を受け取るマシンのホストネームまたは IP アドレスを、 port は通知を受け取るマシンの Growl がリッスンしているポート番号を、それぞれ入力して下さい。
 
 ## できた!
 
-![](https://blogmedia.yosida95.com/2013/05/27/005303/growl.png)
+![Growl 通知](https://blogmedia.yosida95.com/2013/05/27/005303/growl.png)
 
 ね、簡単でしょ?
