--- a/content/2014/09/19/083000.md
+++ b/content/2014/09/19/083000.md
@@ -111,16 +111,16 @@ postTags: [Move]
 
 ## 終わりに
 
-| 項目                                              | 金額            |
-| ------------------------------------------------- | --------------- |
-| 敷金                                              | 家賃 1 ヶ月分   |
-| 礼金                                              | 家賃 1 ヶ月分   |
-| 前家賃                                            | 家賃 1 ヶ月分   |
-| 仲介手数料                                        | 家賃 0.5 ヶ月分 |
-| 家電 (洗濯乾燥機, 冷蔵庫, 電子レンジ, WiFi AP)    | 20 万円         |
-| 家具 (ベッド, マットレス, 机, 椅子, カーテンなど) | 15 万円         |
-| 生活用品/消耗品 (調理器具, タオル, 洗剤など)      | 5 万円          |
-| (合計)                                            | 70 万円         |
+| 項目 {scope="col"}                                | 金額 {scope="col"} |
+|---------------------------------------------------|--------------------|
+| 敷金                                              | 家賃 1 ヶ月分      |
+| 礼金                                              | 家賃 1 ヶ月分      |
+| 前家賃                                            | 家賃 1 ヶ月分      |
+| 仲介手数料                                        | 家賃 0.5 ヶ月分    |
+| 家電 (洗濯乾燥機, 冷蔵庫, 電子レンジ, WiFi AP)    | 20 万円            |
+| 家具 (ベッド, マットレス, 机, 椅子, カーテンなど) | 15 万円            |
+| 生活用品/消耗品 (調理器具, タオル, 洗剤など)      | 5 万円             |
+| (合計)                                            | 70 万円            |
 
 これまで実家暮らしをしていたために全てを買い揃える必要があり、どうせ買うなら長く使えるよい物をと贅沢をした結果、思っていたより出費がかさみました。
 新型 Mac mini が出たらすぐに買ってやろうと目論んでいましたが、これ以上貯金が減るのは精神衛生上よくないので、しばらくは見送りになりそうです。
