--- a/content/2014/12/29/130000.md
+++ b/content/2014/12/29/130000.md
@@ -26,7 +26,7 @@ postTags: [Year in Review]
 ## ゲヒルン勤続 1 年 5 ヶ月
 
 2013 年の8月にアルバイトとして転職し高校卒業を待って2014年4月に正職員登用されたゲヒルンですが、なんだかんだでアルバイト期間を含め勤続期間が1年5ヶ月になりました。<br />
-[![](https://yosida95.com/photos/rZTg6.raw.jpeg)](https://yosida95.com/photos/rZTg6.raw.jpeg)
+[![雇用契約書](https://yosida95.com/photos/rZTg6.raw.jpeg)](https://yosida95.com/photos/rZTg6.raw.jpeg)
 
 ゲヒルンでは主に GitHub の [GehirnInc](https://github.com/GehirnInc) アカウントでの OSS 活動と [Gehirn News](http://news.gehirn.jp/) のライター、社内チャットにいる slackbot の開発・運用などを主にやってきたとかそんな訳はないのですが、現時点でぼくから公開できる情報は特に無いです。
 twitter でゲヒルンの活動がよくわからないという声もちらほらみかけますが、多岐にわたっていて実際ぼくにもよくわからないです。
