--- a/content/2015/03/31/110000.md
+++ b/content/2015/03/31/110000.md
@@ -25,7 +25,7 @@ postTags: [Month in Review]
 - 30 日
   - 気が向いたので出勤前に花見がてら北の丸公園を 1 時間弱散歩した。
 
-[![](https://yosida95.com/photos/u1BDB.raw.png)](https://yosida95.com/photos/u1BDB.raw.png)
+[![GitHub Streak](https://yosida95.com/photos/u1BDB.raw.png)](https://yosida95.com/photos/u1BDB.raw.png)
 
 ## 所感
 
