replace `alias:` metadata by `aliases:` to support multiple aliases

--- a/content/2013/07/31/055159.md
+++ b/content/2013/07/31/055159.md
@@ -2,7 +2,7 @@
 title:
   iptables の ipt_recent モジュール
 date: 2013-07-31T05:51:59+09:00
-alias: 2013/07/31/055100.html
+aliases: [/2013/07/31/055100.html]
 postCategory: Networking
 postTags: [Linux]
 ---
